--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tea House</title>
+
     <link rel="stylesheet" href="/style/style.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://kit.fontawesome.com/1fb895dcbf.js" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
         <section class="mx-5 flex flex-col justify-center md:flex-row md:flex md:justify-center">
             <div
                 class="text-center md:text-start flex flex-col justify-center items-center md:items-start w-[350px] md:w-[628px] mb-4 md:mb-28">
-                <h1 class="text-3xl md:text-7xl font-bold md:leading-2 md:leading-[6.25rem] mb-2">It's good <br>tea time
+                <h1 class="text-3xl md:text-7xl font-bold md:leading-[6.25rem] mb-2">It's good <br>tea time
                     at The Tea House</h1>
                 <p class="text-base md:text-lg font-medium text-[rgb(119,119,119)] md:leading-[1.87rem] mb-2">Tea and
                     Botanical Solutions
@@ -38,18 +39,55 @@
                 </button>
             </div>
         </section>
-        <section class="">
+        <section class="md:mt-[100px]">
             <div class="text-center">
-                <h1>Our Featured Products</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h1 class="text-3xl md:text-5xl font-semibold leading-[3.81rem]">Our Featured Products</h1>
+                <p class="text-lg text-[rgb(119,119,119)] leading-[28px] md:w-[900px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even slightly
                     believable. </p>
             </div>
-            <div>
-                <div>
-                    <img src="images/tea-1.png" alt="">
-                    <h3>Milk Tea</h3>
-                    <p>Creamer could be replaced by fresh milk</p>
+            <div class="grid grid-cols-1 place-items-center md:grid-cols-4 gap-5 mt-5">
+                <div class="w-[277px] h-[391px] flex flex-col items-center justify-center gap-1.5 p-2.5 bg-gradient-to-b from-gray-200 to-gray-100 rounded-sm">
+                    <img  src="images/tea-1.png" alt="">
+                    <h3 class="text-2xl font-semibold">Milk Tea</h3>
+                    <p class="text-base text-[rgb(119,119,119)] w-[208px] text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-[277px] h-[391px] flex flex-col items-center justify-center gap-1.5 p-2.5 bg-gradient-to-b from-gray-200 to-gray-100 rounded-sm">
+                    <img  src="images/tea-2.png" alt="">
+                    <h3 class="text-2xl font-semibold">Black Tea</h3>
+                    <p class="text-base text-[rgb(119,119,119)] w-[208px] text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-[277px] h-[391px] flex flex-col items-center justify-center gap-1.5 p-2.5 bg-gradient-to-b from-gray-200 to-gray-100 rounded-sm">
+                    <img  src="images/tea-3.png" alt="">
+                    <h3 class="text-2xl font-semibold">Lemon Tea</h3>
+                    <p class="text-base text-[rgb(119,119,119)] w-[208px] text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-[277px] h-[391px] flex flex-col items-center justify-center gap-1.5 p-2.5 bg-gradient-to-b from-gray-200 to-gray-100 rounded-sm">
+                    <img  src="images/tea-4.png" alt="">
+                    <h3 class="text-2xl font-semibold">Green Tea</h3>
+                    <p class="text-base text-[rgb(119,119,119)] w-[208px] text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
+        <section class="mt-[50px] md:mt-[100px]">
+            <div class="flex flex-col-reverse md:flex-row gap-16">
+                <div class="grid grid-cols-1 place-items-center md:place-items-start md:grid-cols-2 gap-2.5 md:gap-6">
+                    <div class=" rounded-lg w-[238px] h-[136px] bg-gradient-to-r from-[rgb(255,225,225)] to-[rgb(246,197,164)]"></div>
+                    <div class="rounded-lg w-[238px] h-[355.28px] bg-[rgba(87,118,57,0.1)] flex items-center justify-center">
+                        <img src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="rounded-lg md:transform md:-translate-y-[220px] w-[238px] h-[355.28px] bg-[rgba(87,118,57,0.1)] flex items-center justify-center">
+                        <img src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="rounded-lg w-[238px] h-[136px] bg-gradient-to-r from-[rgb(255,225,225)] to-[rgb(246,197,164)]"></div>
+                </div>
+                <div class="mx-auto text-center md:text-start">
+                    <h1 class="text-3xl md:text-5xl font-bold">Great Tea, Freshly Presented</h1>
+                    <p class=" text-base md:text-lg text-[rgb(119,119,119)] leading-[28px] md:w-[582px] mt-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <h3 class="text-xl font-bold mt-5">Unique Taste</h3>
+                    <p class="text-base md:text-lg text-[rgb(119,119,119)] mt-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h3 class="text-xl font-bold mt-5">Unique Taste</h3>
+                    <p class="text-base md:text-lg text-[rgb(119,119,119)] mt-5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
         </section>
