footer section are added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </section>
-        <section class="mt-[50px] md:mt-[100px]">
+        <section class="mt-[50px] md:mt-20">
             <div class="flex flex-col-reverse md:flex-row gap-16">
                 <div class="grid grid-cols-1 place-items-center md:place-items-start md:grid-cols-2 gap-2.5 md:gap-6">
                     <div class=" rounded-lg w-[238px] h-[136px] bg-gradient-to-r from-[rgb(255,225,225)] to-[rgb(246,197,164)]"></div>
@@ -91,7 +91,91 @@
                 </div>
             </div>
         </section>
+        <section class="bg-gradient-to-r from-[rgb(255,137,56)] to-[rgb(255,0,0)] rounded-[10px]">
+            <div class="flex justify-center items-center gap-10 bg-[url(./images/bg_cup.png)] bg-no-repeat bg-[30%_95%] md:h-[650px] ">
+                <div class="text-white flex flex-col justify-center items-start md:w-[440px]">
+                    <h1 class="text-5xl font-bold">Meet Our Super Clients</h1>
+                    <p class="text-base mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class=" px-6 py-3 bg-[rgb(255,255,255)] rounded-xl mt-5"><h1 class="text-xl font-bold bg-gradient-to-r from-[rgb(255,137,56)] to-[rgb(255,0,0)] inline-block text-transparent bg-clip-text">Show All</h1></button>
+                </div>
+                <div class="">
+                    <div class=" relative opacity-40 left-32 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                        <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
+                        <div class=" transform -translate-y-[40px]">
+                            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3>Ilham Yuda</h3>
+                        <h4>Businessman</h4>
+                        </div>
+                    </div>
+                    <div class="absolute -mt-20 z-10 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                        <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
+                        <div class=" transform -translate-y-[40px]">
+                            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3>Ilham Yuda</h3>
+                        <h4>Businessman</h4>
+                        </div>
+                    </div>
+                    <div class="relative opacity-40 left-32 top-5 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                        <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
+                        <div class=" transform -translate-y-[40px]">
+                            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3>Ilham Yuda</h3>
+                        <h4>Businessman</h4>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <section class="mt-20">
+
+        </section>
     </main>
+    <footer class="bg-[rgba(255,0,0,0.1)] ">
+        <div class="md:w-[1240px] md:h-[500px] mx-auto py-24">
+            <div class="flex justify-between">
+                <div><img src="images/cup.png" alt=""></div>
+                <div class="flex items-center gap-7">
+                    <h3 class="text-xl font-semibold">Ready to get strated?</h3>
+                    <button class="bg-white px-9 py-4 rounded-xl font-bold">Get Started</button>
+                </div>
+            </div>
+            <div class="border-t-2 border-[rgb(16,23,36)] mt-14">
+            </div>
+            <div class="flex justify-between mt-12">
+                <div class="flex flex-col">
+                    <h1>Quick Links</h1>
+                    <h2>Home</h2>
+                    <h2>About Us</h2>
+                    <h2>Insurance</h2>
+                    <h2>Privacy Policy</h2>
+                </div>
+                <div class="flex flex-col">
+                    <h1>Our Service</h1>
+                    <h2>Life Insurance</h2>
+                    <h2>Car Insurance</h2>
+                    <h2>Health Insurance</h2>
+                    <h2>House Insurance</h2>
+                </div>
+                <div class="flex flex-col">
+                    <h1>Our Service</h1>
+                    <h2>Life Insurance</h2>
+                    <h2>Car Insurance</h2>
+                    <h2>Health Insurance</h2>
+                    <h2>House Insurance</h2>
+                </div>
+                <div class="flex flex-col gap-1.5">
+                    <h1>Subscribe to our newsletter</h1>
+                    <div><input class="border-b w-36" type="email" name="" placeholder="Email" id=""><button class="relative left-4 bg-white p-3 rounded-full mr-1"><i class="fa-solid fa-arrow-right"></i></button></div>
+                    <div class="flex gap-5">
+                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
