Client section responsive

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                 </div>
             </div>
         </section>
-        <section class="bg-gradient-to-r from-[rgb(255,137,56)] to-[rgb(255,0,0)] rounded-[10px]">
-            <div class="flex justify-center items-center gap-10 bg-[url(./images/bg_cup.png)] bg-no-repeat bg-[30%_95%] md:h-[650px] ">
-                <div class="text-white flex flex-col justify-center items-start md:w-[440px]">
-                    <h1 class="text-5xl font-bold">Meet Our Super Clients</h1>
-                    <p class="text-base mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <section class="bg-gradient-to-r from-[rgb(255,137,56)] to-[rgb(255,0,0)] rounded-[10px] mt-10 md:mt-20">
+            <div class="flex flex-col md:flex-row justify-center items-center gap-10 bg-[url(./images/bg_cup.png)] bg-no-repeat bg-[30%_95%] h-[1000px] md:h-[650px] ">
+                <div class="text-white flex flex-col justify-center items-center md:items-start md:w-[440px] px-10 py-10">
+                    <h1 class="text-4xl md:text-5xl font-bold">Meet Our Super Clients</h1>
+                    <p class="text-xs md:text-base mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                     <button class=" px-6 py-3 bg-[rgb(255,255,255)] rounded-xl mt-5"><h1 class="text-xl font-bold bg-gradient-to-r from-[rgb(255,137,56)] to-[rgb(255,0,0)] inline-block text-transparent bg-clip-text">Show All</h1></button>
                 </div>
                 <div class="">
-                    <div class=" relative opacity-40 left-32 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                    <div class=" relative opacity-40 md:left-32 flex flex-col justify-center items-start w-[300px] h-[220px] md:w-[433px] md:h-[233px] text-black bg-white px-[50px] rounded-xl">
                         <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
                         <div class=" transform -translate-y-[40px]">
                             <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
@@ -107,7 +107,7 @@
                         <h4>Businessman</h4>
                         </div>
                     </div>
-                    <div class="absolute -mt-20 z-10 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                    <div class="absolute -mt-20 z-10 flex flex-col justify-center items-start w-[300px] h-[220px] md:w-[433px] md:h-[233px] text-black bg-white px-[50px] rounded-xl">
                         <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
                         <div class=" transform -translate-y-[40px]">
                             <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
@@ -115,7 +115,7 @@
                         <h4>Businessman</h4>
                         </div>
                     </div>
-                    <div class="relative opacity-40 left-32 top-5 flex flex-col justify-center items-start w-[433px] h-[233px] text-black bg-white px-[50px] rounded-xl">
+                    <div class="relative opacity-40 bottom-10 md:left-32 top-5 flex flex-col justify-center items-start w-[300px] h-[220px] md:w-[433px] md:h-[233px] text-black bg-white px-[50px] rounded-xl">
                         <img class="transform -translate-y-[40px] -translate-x-[65px]" src="images/client.png" alt="">
                         <div class=" transform -translate-y-[40px]">
                             <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
@@ -157,7 +157,7 @@
                     <h2>Health Insurance</h2>
                     <h2>House Insurance</h2>
                 </div>
-                <div class="flex flex-col">
+                <div class="flex flex-col"> 
                     <h1>Our Service</h1>
                     <h2>Life Insurance</h2>
                     <h2>Car Insurance</h2>
